// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditTicketField/> should render a loader 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;

exports[`<EditTicketField/> should render an info alert and the edit form because it is a "Contact reason" managed ticket field 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/ticket-fields/active"
          >
            Ticket
             fields
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Input field
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="alert info mb-4"
      >
        <div
          class="iconContainer"
        >
          <img
            alt="icon"
            src="test-file-stub"
          />
        </div>
        <div
          class="content"
        >
          <span
            class="label"
          >
            Use this field to gain actionable insights into customer inquiry trends.
            This field is powered by AI and can automatically be filled by Gorgias, 
            <a
              href="https://docs.gorgias.com/en-US/273001-a7d86899ce5f4aef81ebbaa301d78b58"
              rel="noopener noreferrer"
              target="_blank"
            >
              see this article
            </a>
            .
          </span>
        </div>
      </div>
      <form>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT formLabel"
          >
            Status
          </label>
          <div
            class="badge upperCase"
            style="border-radius: 100px;"
          >
            ACTIVE
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT Label--isDisabled--cM4ye label"
            for="input-text-7"
          >
            Name
            <abbr
              aria-label="required"
              class="Label--abbr--Zx_yi"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper isDisabled"
          >
            <input
              aria-describedby="input-text-7-caption"
              class="input"
              disabled=""
              id="input-text-7"
              name="label"
              placeholder="e.g. Contact Reason"
              required=""
              type="text"
              value="Input field"
            />
          </div>
          <div
            class="caption"
            id="input-text-7-caption"
          >
            Visible to agents
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT label"
            for="textarea-9"
          >
            Description
          </label>
          <textarea
            aria-describedby="textarea-9-caption"
            class="textarea"
            id="textarea-9"
            name="description"
            placeholder="e.g. Reasons why customers reach out to us"
            rows="1"
          >
            This is an input field
          </textarea>
          <div
            class="caption"
            id="textarea-9-caption"
          >
            Not visible to agents
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT label"
            for="checkbox-10"
          >
            <input
              class="input"
              id="checkbox-10"
              name="checkbox-10"
              type="checkbox"
            />
            Required to close 
            ticket
          </label>
          <div
            class="caption caption"
          >
            Enable to prevent agents from closing the ticket if the field is left empty. Snooze and Send actions will still work.
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT formLabel"
            for="type"
          >
            Type
            <abbr
              aria-label="required"
              class="Label--abbr--Zx_yi"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
            role="combobox"
            tabindex="-1"
          >
            <div
              class="inputWrapper isDisabled"
            >
              <div
                class="input isGreyed"
              >
                Text
              </div>
              <i
                class="affix suffix toggle material-icons"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <div
            class="caption"
          >
            Field type can’t be changed once it’s been saved.
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT label"
            for="input-text-11"
          >
            Placeholder
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-11"
              name="settings.placeholder"
              type="text"
              value="Some placeholder"
            />
          </div>
        </div>
        <div
          class="buttons"
        >
          <div
            class="leftGroup"
          >
            <button
              aria-disabled="false"
              class="wrapper fill primary medium"
              id="custom-fields-form-save-button"
              type="button"
            >
              <span>
                Save changes
              </span>
            </button>
            <button
              aria-disabled="false"
              class="wrapper fill secondary medium"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="rightGroup"
          >
            <button
              aria-disabled="false"
              class="wrapper fill secondary medium"
              type="button"
            >
              <span>
                Archive field
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<EditTicketField/> should render no info alert and the edit form because it is not a managed ticket field 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/ticket-fields/active"
          >
            Ticket
             fields
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Input field
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer"
  >
    <div
      class="contentWrapper"
    >
      <form>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT formLabel"
          >
            Status
          </label>
          <div
            class="badge upperCase"
            style="border-radius: 100px;"
          >
            ACTIVE
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT label"
            for="input-text-1"
          >
            Name
            <abbr
              aria-label="required"
              class="Label--abbr--Zx_yi"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              aria-describedby="input-text-1-caption"
              class="input"
              id="input-text-1"
              name="label"
              placeholder="e.g. Contact Reason"
              required=""
              type="text"
              value="Input field"
            />
          </div>
          <div
            class="caption"
            id="input-text-1-caption"
          >
            Visible to agents
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT label"
            for="textarea-3"
          >
            Description
          </label>
          <textarea
            aria-describedby="textarea-3-caption"
            class="textarea"
            id="textarea-3"
            name="description"
            placeholder="e.g. Reasons why customers reach out to us"
            rows="1"
          >
            This is an input field
          </textarea>
          <div
            class="caption"
            id="textarea-3-caption"
          >
            Not visible to agents
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT label"
            for="checkbox-4"
          >
            <input
              class="input"
              id="checkbox-4"
              name="checkbox-4"
              type="checkbox"
            />
            Required to close 
            ticket
          </label>
          <div
            class="caption caption"
          >
            Enable to prevent agents from closing the ticket if the field is left empty. Snooze and Send actions will still work.
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT formLabel"
            for="type"
          >
            Type
            <abbr
              aria-label="required"
              class="Label--abbr--Zx_yi"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
            role="combobox"
            tabindex="-1"
          >
            <div
              class="inputWrapper isDisabled"
            >
              <div
                class="input isGreyed"
              >
                Text
              </div>
              <i
                class="affix suffix toggle material-icons"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <div
            class="caption"
          >
            Field type can’t be changed once it’s been saved.
          </div>
        </div>
        <div
          class="formRow"
        >
          <label
            class="Label--label--QAnfT label"
            for="input-text-5"
          >
            Placeholder
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-5"
              name="settings.placeholder"
              type="text"
              value="Some placeholder"
            />
          </div>
        </div>
        <div
          class="buttons"
        >
          <div
            class="leftGroup"
          >
            <button
              aria-disabled="false"
              class="wrapper fill primary medium"
              id="custom-fields-form-save-button"
              type="button"
            >
              <span>
                Save changes
              </span>
            </button>
            <button
              aria-disabled="false"
              class="wrapper fill secondary medium"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
          <div
            class="rightGroup"
          >
            <button
              aria-disabled="false"
              class="wrapper fill secondary medium"
              type="button"
            >
              <span>
                Archive field
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
